--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hack or Snooze</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/static//favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon_io//favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon_io//favicon-16x16.png">
-  <link rel="manifest" href="/static/favicon_io/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./static//favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon_io//favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon_io//favicon-16x16.png">
+  <link rel="manifest" href="./static/favicon_io/site.webmanifest">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="style.css" type="text/css">
