close submit story button added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <label for="url">url</label>
         <input id="url" required type="url" placeholder="article url">
       </div>
-      <button type="submit">submit</button>
+      <div>
+        <button type="reset" id="close-sumbit-form">close</button>
+        <button type="submit">submit</button>
+      </div>
       <hr>
     </form>
     <form action="#" class="hidden" id="edit-article-form">
